# gc-lake

./: README.md
bronze/: ingestion.py
bronze/schemas/: tb_lobby_stats_player.json
databases/: create_databases.sql
lib/utils/: db.py
raw/: incremental_lobby.py  load.py  pyproject.toml  teste.json
silver/: ingestion.py
silver/queries/: tb_lobby_stats_player.sql
