[tool.poetry]
name = "raw"
version = "0.1.0"
description = "Raw database for boto3"
authors = ["Ayslan Leal"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.23.0"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.36"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
